@@ -407,7 +407,7 @@ push_item(User, Server, Resource, _From, Item) ->
 
 push_item(User, Resource, From, Item) ->
     ResIQ = #iq{type = set, xmlns = ?NS_ROSTER,
-		id = "push",
+		id = "push" ++ randoms:get_string(),
 		sub_el = [{xmlelement, "query",
 			   [{"xmlns", ?NS_ROSTER}],
 			   [item_to_xml(Item)]}]},
